chore: docs cleanup